--- a/scm/Test.html
+++ b/scm/Test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My Simple Webpage</h1>
-<h2> HELLO </h2>
+<h2> HELLO Everyone </h2>
     <p>This is a paragraph of text to display on the page. Enjoy browsing!</p>
     <button onclick="alert('Hello! You clicked the button!')">Click Me</button>
 </body>
