--- a/scm/Test.html
+++ b/scm/Test.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to My Simple Webpage</h1>
 <h2> HELLO Everyone </h2>
-<h3> modifing </h3>
+<h3> modifing the page </h3>
     <p>This is a paragraph of text to display on the page. Enjoy browsing!</p>
     <button onclick="alert('Hello! You clicked the button!')">Click Me</button>
 </body>
