first commit in b3  branch

--- a/SCMTEST/source.html
+++ b/SCMTEST/source.html
@@ -6,6 +6,7 @@
 <body>
   <h1>Hello, Vignesh!</h1>
 <h2> i am studing in amity </h2>
+<h4>in bengaluru</h4>
 <h3> i am betech student </h3>
   <p>This is a simple HTML page.</p>
 </body>
